# ikerlan

./: .gitignore  README.md  thirdparty.repos
.github/workflows/: master.yaml
bt_bumpgo/: CMakeLists.txt  package.xml
bt_bumpgo/behavior_tree_xml/: bumpgo.xml
bt_bumpgo/include/bt_bumpgo/: Turn.hpp
bt_bumpgo/src/: bt_bumpgo_main.cpp
bt_bumpgo/src/bt_bumpgo/: Forward.cpp  IsObstacle.cpp
dds_demos/: CMakeLists.txt  package.xml
dds_demos/config/fast/: unicast.xml
dds_demos/src/: large_file.cpp
fsm_bumpgo/: CMakeLists.txt  package.xml
fsm_bumpgo/launch/: fsm_bumpgo.launch.py
install/: local_setup.sh  setup.sh
install/bt_bumpgo/share/bt_bumpgo/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
kobuki/launch/: kobuki.launch.py  navigation.launch.py
log/: latest_build
node_programming/day_1/speed_limiter_1/: CMakeLists.txt  package.xml
node_programming/day_1/speed_limiter_1/src/: speed_limiter.cpp
node_programming/day_1/speed_limiter_2/: CMakeLists.txt  package.xml
node_programming/day_1/speed_limiter_2/src/: speed_limiter.cpp
node_programming/day_1/speed_limiter_3/: CMakeLists.txt  package.xml
node_programming/day_1/speed_limiter_3/config/: params.yaml
node_programming/day_1/speed_limiter_3/include/speed_limiter_3/: SpeedLimiter.hpp
node_programming/day_1/speed_limiter_3/launch/: speed_limiter.launch.py
node_programming/day_1/speed_limiter_3/src/: speed_limiter.cpp
node_programming/day_1/speed_limiter_3/src/speed_limiter_3/: SpeedLimiter.cpp
node_programming/day_1/speed_limiter_3/tests/: CMakeLists.txt  speed_limiter_test.cpp
node_programming/day_2/vector_transmission/: CMakeLists.txt  package.xml
node_programming/day_2/vector_transmission/include/vector_transmission/: VectorConsumer.hpp  VectorProducer.hpp
node_programming/day_2/vector_transmission/launch/: vector_transmission.launch.py
node_programming/day_2/vector_transmission/src/: vector_transmission_mtr.cpp
node_programming/day_2/vector_transmission/src/vector_transmission/: VectorConsumer.cpp  VectorProducer.cpp
node_programming/day_3/comms/.github/workflows/: main.yaml
node_programming/day_3/comms/comms/: CMakeLists.txt
node_programming/day_3/comms/comms/include/comms/: ActionClient.hpp  ActionServer.hpp  ServiceClient.hpp  ServiceServer.hpp
node_programming/day_3/comms/comms/src/: action_client_main.cpp  action_server_main.cpp  service_client_main.cpp
node_programming/day_3/comms/comms/src/comms/: ActionClient.cpp  ActionServer.cpp  ServiceServer.cpp
node_programming/day_3/comms/comms/test/: comms_tests.cpp
node_programming/day_3/comms/comms_msgs/: CMakeLists.txt  package.xml
node_programming/day_3/sensor_fussion/: CMakeLists.txt  package.xml
node_programming/day_3/sensor_fussion/include/sensor_fussion/: CameraDriver.hpp  FussionNode.hpp  LaserDriver.hpp
node_programming/day_3/sensor_fussion/launch/: sensor_fussion.launch.py
node_programming/day_3/sensor_fussion/src/: startup_script.cpp
node_programming/day_3/sensor_fussion/src/sensor_fussion/: CameraDriver.cpp  FussionNode.cpp  LaserDriver.cpp
perception_demo/: CMakeLists.txt  package.xml
perception_demo/include/perception_demo/: OpenCVPubSub.hpp  PCLPubSub.hpp
perception_demo/src/: main_image_pub.cpp  main_image_transport_pub.cpp  main_image_transport_sub.cpp  main_opencv_pub_sub.cpp  main_pcl_pub_sub.cpp
perception_demo/src/perception_demo/: OpenCVPubSub.cpp  PCLPubSub.cpp
src/bt_bumpgo/: CMakeLists.txt
src/bt_bumpgo/include/bt_bumpgo/: IsObstacle.hpp
src/bt_bumpgo/launch/: bt_bumpgo.launch.py
src/bt_bumpgo/src/: bt_bumpgo_main.cpp
src/bt_bumpgo/src/bt_bumpgo/: Back.cpp  Forward.cpp  IsObstacle.cpp  Turn.cpp
src/dds_demos/: CMakeLists.txt  package.xml
src/dds_demos/config/cyclone/: unicast_config.xml
src/dds_demos/config/fast/: unicast.xml
src/dds_demos/src/: large_file.cpp
src/fsm_bumpgo/: CMakeLists.txt  package.xml
src/fsm_bumpgo/src/: bumpgo_node.cpp
src/kobuki/: CMakeLists.txt  package.xml
src/kobuki/config/: params.yaml
src/kobuki/launch/: navigation.launch.py
src/kobuki/maps/: map.yaml
src/kobuki/params/: nav_params.yaml
src/tiago/: package.xml
tiago/: CMakeLists.txt
tiago/src/: fake_bumper.cpp
